<resources>
    <string name="app_name">Ecommerce</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="register_title">Register</string>
    <string name="login_title">Login</string>
    <string name="username">username</string>
    <string name="firstName">First Name</string>
    <string name="surname">Surname</string>
    <string name="pwd_equal">Correct</string>
    <string name="pwd_not_equal">Wrong password</string>
    <string name="email">Email</string>
    <string name="pwd">Password</string>
    <string name="confirmPwd">Confirm Password</string>
    <string name="acceptPwd">Acceptable Password</string>
    <string name="area">Area</string>
    <string name="city">City</string>
    <string name="salary">Salary</string>
    <string name="Date">Date</string>
    <string name="start">Start Date</string>
    <string name="end">Completion Date</string>
    <string name="userType">User Type</string>
    <string name="employeeBtn">Employee</string>
    <string name="employerBtn">Employer</string>
    <string name="btnRegister">Register</string>
    <string name="btnAddTask">Add Task</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_employer_home">EmployerHomeActivity</string>


    <!-- GCM Staff -->
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="registering_message">Generating InstanceID token...</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>

    <!-- Employee Home -->
    <string name="profile_title">Employee Profile</string>
    <string name="employeeName"></string>
    <string name="history">My work History</string>
    <string name="btnHistory">Show Work History</string>
    <string name="skillsTitle">My skills:</string>
    <string name="title_activity_work_history">WorkHistoryActivity</string>
    <string name="btnAddSkills">Add skills</string>
    <string name="title_activity_profile">ProfileActivity</string>

    <!-- Employee Home -->
    <string name="profile_title2">Employer Profile</string>
    <string name="employerName"></string>
    <string name="competitions">My Competitions</string>
    <string name="btnCompetitions">Show Competitions</string>
    <string name="btnNewCompetition">Create new Competition</string>
    <string name="title_activity_add_task">AddTaskActivity</string>
    <string name="decription">Description</string>
    <string name="Title">Title</string>
    <string name="newTask">Create new Task</string>
    <string name="shortDecription">Short Description</string>
    <string name="fullDecription">Full Description</string>
    <string name="startDate">Start Date</string>
    <string name="title_activity_employer_task">Employer Task</string>
    <string name="title_activity_get_user_tasks">Get User Tasks</string>
    <string name="btnSearchComp">Search Competition</string>
    <string name="search_task_title">SearchTask</string>
    <string name="btnAddSkillsFinal">Add</string>
    <string name="select_string" />
    <string name="title_activity_employee_history">EmployeeHistoryActivity</string>
    <string name="employee_history">My Task History</string>
    <string name="title_activity_search_employees">SearchEmployeesActivity</string>
    <string name="title_activity_search_history">SearchHistoryActivity</string>
    <string name="title_activity_offers">OffersActivity</string>


</resources>
