<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:id="@+id/relativeLayout1"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.gmithighracks.ecommerce.EmployeeHomeActivity">



    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:text="@string/profile_title"
        android:textSize="25sp"
        android:textStyle="bold"
        android:id="@+id/textView" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/employeeName"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView2" />

    <Button
        android:id="@+id/btnSearchComp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#83b1ff"
        android:text="@string/btnSearchComp"
        android:textColor="#fff"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnHistory"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#83b1ff"
        android:text="@string/btnHistory"
        android:textColor="#fff"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="51dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/skillsTitle"
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/textView3"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/dropDownListSkills"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/drop_down_image"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="getAbilities"
        android:layout_alignTop="@+id/textView3" />

    <Button
        android:id="@+id/btnAddSkills"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#83b1ff"
        android:text="@string/btnAddSkills"
        android:textColor="#fff"
        android:layout_below="@+id/dropDownListSkills"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="51dp" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:onClick="logout"
        android:text="logout"
        android:textColor="#228b22"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/dropDownListSkills"
        android:layout_alignEnd="@+id/dropDownListSkills" />
</RelativeLayout>
